--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-gray-100 dark:bg-gray-800 transition-colors ease-in">
+  <body
+    class="bg-gray-100 dark:bg-gray-800 transition-colors ease-in overflow-x-hidden"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
